Adds Mastodon verification

--- a/public/index.html
+++ b/public/index.html
@@ -325,6 +325,7 @@ Mildly Geeky
 <li><a href="work.html" title="Our Work">Our Work</a></li>
 <li><a href="about.html" title="About">About</a></li>
 <li><a href="contact.html" title="Contact">Contact</a></li>
+<li><a rel="me" href="https://hachyderm.io/@mildlygeeky">Mastodon</a></li>
 </ul>
                     </nav>
                 </div>
