--- a/public/stripe-test.html
+++ b/public/stripe-test.html
@@ -1,5 +1,5 @@
 <html>
-  <head>Stripe Test</head>
+  <head><title>Stripe Test</title></head>
   <body>
     <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
 <stripe-pricing-table pricing-table-id="prctbl_1PikEBHtUVr2Ynqf55V2x7AX"
